# openenclave

./: CMakeLists.txt  README.md
.github/workflows/: codeql-analysis.yml
cmake/: compiler_settings.cmake
enclave/core/: CMakeLists.txt
enclave/core/sgx/: asmdefs.h  edmm.S  edmm.c
enclave/core/sgx/edmm/: bit_array.c  ema.c  emalloc.c  emm_private.c  sgx_mm.c
enclave/core/sgx/include/: ema.h  ema_imp.h  emalloc.h  emm_private.h  sgx_mm.h  sgx_mm_rt_abstraction.h
host/: CMakeLists.txt
host/sgx/: create.c  exception.c  sgx_enclave_common_wrapper.c  sgx_enclave_common_wrapper.h  sgxload.c
host/sgx/linux/: enter.c  vdso.c
host/sgx/ocalls/: ocalls.c
include/openenclave/edl/sgx/: edmm.edl  platform.edl
libc/: CMakeLists.txt  mman.c  stdlib.c
samples/attestation/: CMakeLists.txt
samples/attestation/common/: attestation_args.h  attestation_t.c  attestation_t.h
samples/attestation/enclave_a/: enclave_b_pubkey.h  private.pem  public.pem
samples/attestation/enclave_b/: CMakeLists.txt  Makefile  ecalls.cpp  enc.conf  enclave_a_pubkey.h  private.pem  public.pem
samples/attestation/host/: host.cpp
samples/attestation/libaio/src/: compat-0_1.c
samples/attestation/splinterdb/include/splinterdb/: splinterdb.h
samples/attestation/splinterdb/src/: platform.h  splinterdb.c
samples/attestation/splinterdb/src/platform_linux/: laio.c  platform.c  platform_inline.h  poison.h
samples/attestation/splinterdb_backup/include/splinterdb/: public_platform.h  splinterdb.h
samples/attestation/splinterdb_backup/src/: default_data_config.c  splinterdb.c
samples/attestation/splinterdb_backup/src/platform_linux/: platform_inline.h
samples/helloworld/: helloworld.edl
samples/helloworld/enclave/: enc.c  helloworld_args.h  helloworld_t.c  helloworld_t.h  helloworldenc  helloworldenc.signed  private.pem  public.pem
samples/helloworld/host/: helloworld_u.c  helloworld_u.h  helloworldhost  host.c
syscall/: syscall.c
tools/oesign/: CMakeLists.txt
tools/oeutil/: CMakeLists.txt
tools/oeutil/host/: generate_evidence.cpp
